--- a/Oscar jumping/index.html
+++ b/Oscar jumping/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <git remote set-url origin https://github.com/JavaProgramTo/Kotlin-Demo.git
+
+git add *.java
+git commit -m "commit title"
+git push origin master></git>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Oscar jump</title>
